[Feat FIX] Reg Endpoint Added
